# ai

./: brochure.py  langchain_call.py  main.py  ollama.py  prices.db  pyproject.toml  scrapper.py  tok.py  tool_calling.py  tool_calling_with_db.py  two_llm_talk.py
